# polkachat.rs

./: .gitignore  Cargo.toml  NOTICE  README.md  build.gradle  settings.gradle
android/: build.gradle
android/src/androidTest/java/one/tesseract/polkachat/: ExampleInstrumentedTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/one/tesseract/polkachat/: MainActivity.kt  MainViewModel.kt  Message.kt  UI.kt
android/src/main/java/one/tesseract/polkachat/rust/: Core.kt
android/src/main/java/one/tesseract/polkachat/ui/components/: Messages.kt  SignIn.kt  UserControls.kt
android/src/main/java/one/tesseract/polkachat/ui/main/: MainFragment.kt  MainViewModel.kt
android/src/main/java/one/tesseract/polkachat/ui/theme/: Color.kt  Shape.kt  Theme.kt  Type.kt
android/src/main/res/layout/: fragment_main.xml
android/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/src/main/res/values-night/: themes.xml
android/src/test/java/one/tesseract/polkachat/: ExampleUnitTest.kt
common/: Cargo.toml  build.rs  cbindgen.toml
common/src/: core.rs  delegate.rs  error.rs  lib.rs  ui.rs
common/src/android/: core.rs  env.rs  error.rs  future.rs  mod.rs  tokio.rs
common/src/android/ui/: jui.rs  ui.rs
common/src/contract/: api.rs  call.rs  mod.rs  primitives.rs
common/src/ios/: array.rs  core.rs  error.rs  logger.rs  mod.rs  ui.rs
common/src/ios/ui/: mod.rs  sui.rs  ui.rs
common/src/substrate/: account.rs  client.rs  credentials.rs  mod.rs  signer.rs
contract/: Cargo.toml  lib.rs
gradle/wrapper/: gradle-wrapper.properties
ios/PolkaChat/: ContentView.swift  Core.swift  CoreProtocol.swift  Info.plist  Message.swift  PolkaChatApp.swift  ViewModel.swift
ios/PolkaChat.xcodeproj/: project.pbxproj
ios/PolkaChat/Model/: ErrorModel.swift  ViewModel.swift
ios/PolkaChat/Rust/: CArray.swift  CFuture.swift  Core.swift  SUI.swift  UI.swift
ios/PolkaChat/UI/: HeaderView.swift  MessagesView.swift  SignInView.swift  UserControlsView.swift
