# Licensed under the Apache License, Version 2.0.

[package]
name = "polkachat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
errorcon = "0.1"
futures = "0.3"

#logger
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }

tokio = {version="1.25.0", features=["rt-multi-thread"]}

subxt = "0.32"
subxt-signer = {version = "0.32", features = ["subxt"]}
scale-info = "*"
scale-encode = "*"
scale-decode = "*"
parity-scale-codec = "*"
jsonrpsee-core = "*"
jsonrpsee-client-transport = {version = "*", features = ["webpki-tls"] }

tesseract = { path = "../../Tesseract.rs/tesseract", features = ["client"] }
tesseract-protocol-substrate = { path = "../../Tesseract.rs/protocols/substrate", features = ["client"] }
#tesseract = {git = "https://github.com/tesseract-one/Tesseract.rs", branch="master", features=["client"]}
#tesseract-protocol-substrate = {git = "https://github.com/tesseract-one/Tesseract.rs", branch="master", features=["client"]}

[target.'cfg(target_os = "android")'.dependencies]
#logger
android_logger = "0.13"

#android interop
jni = "0.20"
jni_fn = "0.1"
crabdroid = { path = "../../Tesseract.android/rust/crabdroid" }

tesseract-android = { path = "../../Tesseract.android/rust/sdk", features=["client"]}

[target.'cfg(target_os = "ios")'.dependencies]
stderrlog = "0.3"

tesseract-swift-utils = { path = "../../Tesseract.swift/Rust/utils" }
tesseract-swift-transports = { path = "../../Tesseract.swift/Rust/transports", features = ["client"]}
#tesseract-swift-utils = { git = "https://github.com/tesseract-one/Tesseract.swift", branch = "master" }
#tesseract-swift-transports = { git = "https://github.com/tesseract-one/Tesseract.swift", branch = "master", features = ["client"]}

[build-dependencies]
build-target = "0.4.0"
cbindgen = "0.26"

[lib]
crate_type = ["cdylib", "staticlib"]
