# Licensed under the Apache License, Version 2.0.

[package]
name = "polkachat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
thiserror = "1.0"
errorcon = "0.1"
futures = "0.3"

#logger
log = "0.4"
log-panics = { version = "2", features = ["with-backtrace"] }

tokio = {version="1.25.0", features=["rt-multi-thread"]}

# substrate libraries
subxt = "0.32.1"
subxt-signer = {version = "0.32.1", features = ["subxt"]}
# check proper libraries versions in the subxt workspace Cargo.toml
scale-info = "2.9.0"
scale-encode = "0.5.0"
scale-decode = "0.9.0"
parity-scale-codec = "3.4.0"
jsonrpsee-core = "0.20"
jsonrpsee-client-transport = {version = "0.20", features = ["webpki-tls"] }
# end of substrate libraries

tesseract-one = { version = "0.5", features = ["client"] }
tesseract-protocol-substrate = { version = "0.5", features = ["client"] }

[target.'cfg(target_os = "android")'.dependencies]
#logger
android_logger = "0.13"

#android interop
jni = "0.20"
jni_fn = "0.1"
crabdroid = "0.3"

tesseract-android = { version = "0.5", features = ["client"] }

[target.'cfg(target_os = "ios")'.dependencies]
stderrlog = "0.5"

tesseract-swift = { version = "0.5", features = ["client"] }

[build-dependencies]
build-target = "0.4.0"
cbindgen = "0.26"

[lib]
crate_type = ["cdylib", "staticlib"]
